--- a/config.json.sample
+++ b/config.json.sample
@@ -1,5 +1,6 @@
 {
     "domain": "WORKGROUP",
+    "guest": false,
     "users": [
         { "name": "user1", "password": "123456" },
         { "name": "user2", "password": "aaabbb" }
