Implemented HTTPS for Remote API

--- a/development/Dockerfile
+++ b/development/Dockerfile
@@ -12,6 +12,7 @@ RUN (curl -sL https://rpm.nodesource.com/setup_10.x | bash -) \
     samba-client \
     samba-common \
     nodejs \
+    openssl \
   && yum autoremove -y \
   && yum clean all -y \
   && npm install npm --global
