--- a/development/branch-2.x.x/Dockerfile
+++ b/development/branch-2.x.x/Dockerfile
@@ -1,22 +1,21 @@
 
 
-FROM centos:7
+FROM adevur/centos-8:latest
 
 MAINTAINER adevur (madavurro@protonmail.com)
 
-RUN (curl -sL https://rpm.nodesource.com/setup_10.x | bash -) \
-  && yum clean all -y \
+RUN yum clean all -y \
   && yum update -y \
   && yum install -y \
     samba \
     samba-client \
     samba-common \
-    nodejs \
     openssl \
     psmisc \
+    procps-ng \
+  && yum module install -y nodejs \
   && yum autoremove -y \
-  && yum clean all -y \
-  && npm install npm --global
+  && yum clean all -y
 
 COPY ./startup /startup
 
