FIX-10 (for branch 1.x.x)
Unified Dockerfiles for amd64 and arm64v8.

--- a/development/branch-1.x.x/Dockerfile
+++ b/development/branch-1.x.x/Dockerfile
@@ -1,6 +1,6 @@
 
 
-FROM docker.io/amd64/centos:7
+FROM docker.io/centos:7
 
 LABEL org.label-schema.schema-version = "1.0" \
     org.label-schema.name = "easy-samba" \
